media/style/menuoptions.css
/*--  rocker css  --*/
div.rocker { height:31px; width:168px;overflow: hidden; }
div.ltup { float:left; text-align:center; font-size:14px;
    background: url(../images/rocker_lt_up.png); width:84px; height:31px; }
div.ltdown { float:left; text-align:center; font-size:14px;
    background: url(../images/rocker_lt_down.png); width:84px; height:31px; }
div.rtup { float:right; text-align:center; font-size:14px; 
    background: url(../images/rocker_rt_up.png); width:84px; height:31px; }
div.rtdown { float:right; text-align:center; font-size:14px;
    background: url(../images/rocker_rt_down.png); width:84px; height:31px; }
div.rocker span.innertext { line-height:31px;}
div.rocker div.ltup:hover, div.rtup:hover { color: yellow; font-style:italic; }

span table.HdrFilter, table.CrEaTeDtAbLeStYlE { 
    border-collapse:collapse; 
    font-size: 14px; 
    text-align:center; 
    margin-left: auto; 
    margin-right: auto;
    font-family: Georgia, 'Times New Roman', Times, serif; 
    background-color: #EFE; 
    table-layout: auto;
} 

span table.HdrFilter td, th {
   border: 1px solid silver;
}

span table.CrEaTeDtAbLeStYlE tr.odd { 
   background-color: #DFD;
}
span table.CrEaTeDtAbLeStYlE tr.even { 
    background-color: white;
} 
span table.HdrFilter, table.CrEaTeDtAbLeStYlE td.dflt { 
   border: 1px solid silver; 
   padding: 4px; 
   min-width: 30px;
} 
span table.CrEaTeDtAbLeStYlE td.mo { 
   background: #ECD872; 
   cursor: pointer; 
   border: 1px solid #999999 ;
   background: #dadada url(../images/ui-bg_glass_75_dadada_1x400.png) 50% 50% repeat-x;
   font-weight: normal;
   color: brown; 
}
div.clear_btn { 
                 background-image:url('../images/clearRec.png') ; 
                 border:2px outset lightgray;
                 cursor:pointer; 
                 height:18px; 
                 width:18px; 
                 display:inline-block; 
                 vertical-align:middle;
                 margin-bottom: 3px;
              }
div.clear_btn.ClearButtonMO { 
   border-color: #95C256;
}

span table.CrEaTeDtAbLeStYlE td.divider, span table.CrEaTeDtAbLeStYlE td.hdr { 
    font-weight: bold;
}

